<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChineseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_chRestaurant_1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address_chRestaurant_1"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="326dp"
                android:layout_height="94dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ch1" />

            <Button
                android:id="@+id/btn_ch1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:onClick="switchShowRestaurant_onClick"
                android:backgroundTint="@color/light_orange"
                android:text="Select" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_ch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_chRestaurant_2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_ch2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address_chRestaurant_2"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_ch2"
                android:layout_width="326dp"
                android:layout_height="94dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ch2" />

            <Button
                android:id="@+id/btn_ch2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:onClick="switchShowRestaurant_onClick"
                android:backgroundTint="@color/light_orange"
                android:text="Select" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_ch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_chRestaurant_3"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_ch3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address_chRestaurant_3"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_ch3"
                android:layout_width="326dp"
                android:layout_height="94dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ch3" />

            <Button
                android:id="@+id/btn_ch3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:onClick="switchShowRestaurant_onClick"
                android:backgroundTint="@color/light_orange"
                android:text="Select" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="315dp"
                android:layout_height="88dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_ch4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_chRestaurant_4"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_ch4"
                    android:layout_width="174dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address_chRestaurant_4"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_ch4"
                android:layout_width="255dp"
                android:layout_height="86dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ch4" />

            <Button
                android:id="@+id/btn_ch4"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/light_orange"
                android:onClick="switchShowRestaurant_onClick"
                android:text="Select" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>